--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
   },
   "homepage": "https://github.com/nakhaev/template#readme",
   "devDependencies": {
+    "browser-sync": "^2.23.6",
     "gulp": "^3.9.1",
     "gulp-clean-css": "^3.9.3",
-    "gulp-inject-string": "^1.1.1",
+    "gulp-inject-css": "^0.3.10",
     "gulp-less": "^4.0.0"
   }
 }
