--- a/package.json
+++ b/package.json
@@ -18,9 +18,14 @@
   "homepage": "https://github.com/nakhaev/template#readme",
   "devDependencies": {
     "browser-sync": "^2.23.6",
+    "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-clean-css": "^3.9.3",
     "gulp-inject-css": "^0.3.10",
-    "gulp-less": "^4.0.0"
+    "gulp-inject-string": "^1.1.1",
+    "gulp-less": "^3.5.0"
+  },
+  "dependencies": {
+    "npm": "^5.8.0"
   }
 }
