--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "template",
   "version": "1.0.0",
-  "description": "…or create a new repository on the command line echo \"# template\" >> README.md git init git add README.md git commit -m \"first commit\" git remote add origin https://github.com/nakhaev/template.git git push -u origin master #\u0000 \u0000t\u0000e\u0000m\u0000p\u0000l\u0000a\u0000t\u0000e\u0000\r\u0000 \u0000",
+  "description": "Base template of web interface for controllers based on STM32 32-bit ARM Cortex MCUs",
   "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
